# Dialogue_System_Live_Competition_7

./: .dockerignore  .gitignore  .gitmodules  README.md  pyproject.toml  run.sh
MMDAgent-EX/: README.md  run_situation.vbs  run_task.vbs  situation.fst  situation.mdf  task.fst
config/: config.yaml
docker/: README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.prompt-only.yaml  docker-compose.task.yaml  dockerfile
logger/: README.md  dockerfile  pyproject.toml
logger/logger/: main.py
modules/: asr.py  base.py  debug_tts.py  dialogue.py  input.py  llm.py  output.py  prompt_util.py  sample_travel_viewer.py  text_vap.py  time_out.py  travel_viewer.py  tts.py  video_process.py
modules/prompt/: response_w_tts_style.txt
prompts/: response_w_tts_style.txt  time_out.txt
remdis-tools/: .gitattributes  input  output
scripts/: list_audio_devices.sh  run_sample_travel_viewer.sh  run_situation.sh  run_task.sh
